// Generated Particle
//
// Created by Samvel Khalatyan, Apr 22, 2011
// Copyright 2011, All rights reserved

import "Physics.proto";

package bsm;

message GenParticle
{
    required PhysicsObject physics_object = 1;

    required int32 id = 2;
    required int32 status = 3;

    repeated GenParticle children = 4;
}
