// Primary vertices (interaction points)
//
// Created by Samvel Khalatyan, Apr 19, 2011
// Copyright 2011, All rights reserved

import "Physics.proto";

package bsm;

message PrimaryVertex
{
    message Extra
    {
        optional float rho = 1;
        optional uint32 ndof = 2;
    }

    required Vector vertex = 1;
    optional Extra extra = 2;
}
