// Trigger object
//
// Created by Samvel Khalatyan, May 26, 2011
// Copyright 2011, All rights reserved

package bsm;

message Trigger
{
    required uint64 hash = 1;
    required bool pass = 2;
    optional uint32 version = 3 [default = 1];
    optional uint32 prescale = 4;
}

// Association of the Trigger ID's and Names

message TriggerItem
{
    optional uint64 hash = 1;
    optional string name = 2;
}
